- Created an Auto-Updater for Windows.
- Added the ability to configure the predominantly used hand. This is taken into 
  account in the default Player Layouts.
- Added a new in-built Layout that wastes less screen real estate.
- Added the possibility to connect to sex toys and issue commands to sex toys in a tease.
  - Added a Buttplug.io device client to connect to toys via Initface.

Changes:
- Changed debug-view to a layout with splitter to support resizing the debugger.
- Updated the Script Editor with a lot of new features:
  - Better code folding.
  - Color coded matching of braces, brackets and paratheses.
  - Highlighting of selected word.
  - Toolbar at the bottom.
  - Better input completion.
- Scenes now allow to select an existing Script Resource instead of having to create
  a new one.
- Script files reload without a user prompt if changed externally and not changed in 
  the Editor.

Fixed Bugs:
- Fixed a few UI typos.
- Fixed a crash that occured if a project was loaded that contained a resource of
  an unknown type.

=================
Version 1.3.1.0
=================

Fixed Bugs:
- Fixed an error introduced in 1.3.0 with parsing notification.show() arguments resulting
  in not starting onButton scripts in certain calls.
- Fixed a crash that occured when opening a project with an eos Script in first place
  of the Script list.
- Fixed EOS Scripts leaving the editor blank after starting a debug session.
- Fixed EOS notifications not working correctly.
- Fixed EOS Scripts not terminating after the last scene ended if there was an open
  notification running.
- Fixed some code generation overlays messing up the initial enabled state of certain 
  elements.
- Fixed global constants missing from sanboxed Lua scripts.
- Fixed race condition that prevented sceneManager.gotoScene() to transition to scenes
  when called at the end of scripts.
- Fixed Lua code generation for global enum values (IconAlignment, TextAlignment).

=================