@@ -173,53 +173,5 @@ QVariant CScriptStorageLua::load(QString sId)
 void CScriptStorageLua::store(QString sId, QVariant value)
 {
   if (!CheckIfScriptCanRun()) { return; }
-
-  std::function<QVariant(QVariant)> fnConvert =
-      [&fnConvert](QVariant var) -> QVariant
-  {
-    QVariant varConverted;
-    switch (var.type())
-    {
-      case QVariant::Map:
-      {
-        QVariantList convertedList;
-        QVariantMap map = var.toMap();
-        if (script::CouldBeListFromLua(map))
-        {
-          // we need to convert these types of maps to a list
-          for (const auto& v : qAsConst(map))
-          {
-            convertedList << fnConvert(v);
-          }
-          varConverted = convertedList;
-        }
-        else
-        {
-          QVariantMap convertedMap;
-          for (auto it = map.begin(); map.end() != it; ++it)
-          {
-            convertedMap.insert(it.key(), fnConvert(it.value()));
-          }
-          varConverted = convertedMap;
-        }
-      } break;
-      case QVariant::List:
-      {
-        QVariantList convertedList;
-        QVariantList list = var.toList();
-        for (const auto& v : qAsConst(list))
-        {
-          convertedList << fnConvert(v);
-        }
-        varConverted = convertedList;
-      }
-      default:
-      {
-        varConverted = var;
-      } break;
-    }
-    return varConverted;
-  };
-
-  StoreImpl(sId, fnConvert(value));
+  StoreImpl(sId, script::ConvertLuaVariant(value));
 }
